Thu Jan 16 15:22:06 1997  Gray Watson  <gray@burger.letters.com>

	* Releasing version 3.2.0.

	* Moved to memcpy and memcmp from the b routines.

	* Fixed the locking for pthread programs.  Dumb errors.

	* Ran new fillproto on h-files.  IMPORT -> extern.

Thu Dec 28 20:39:00 1995  Gray Watson  <gray@burger.letters.com>

	* Releasing version 3.1.3.

	* Added new argv versions to fix problems.

	* Don't allow silent dumps of test program.

Tue Dec 19 19:11:19 1995  Gray Watson  <gray@burger.letters.com>

	* Added registration subdirectory.

Mon Nov 20 22:14:14 1995  Gray Watson  <gray@burger.letters.com>

	* Removed some unresolved references in argv.c: strcasecmp, strdup.

	* Fixed some porting problems to Unixware.  Unsigned chars.

Mon Oct 21 00:23:51 1995  Gray Watson  <gray@burger.letters.com>

	* Fixed bug where I called display_pnt instead of display_where.

Tue Oct 10 18:43:09 1995  Gray Watson  <gray@burger.letters.com>

	* Releasing version 3.1.2.

Mon Sep 18 10:14:36 1995  Gray Watson  <gray@burger.letters.com>

	* Finally tested fore myself the configure --srcdir option.  Found
	lots of places with missing $(srcdir) entries.

Wed Sep  6 13:33:59 1995  Gray Watson  <gray@burger.letters.com>

	* Released version 3.1.2-gamma.

	* Added sbrk handling in the dmalloc_t test program.

	* Renumbered error values so inserting won't be a problem in the
	future.  Added ERROR_EXTERNAL_HUGE.

	* Added new argv files.

	* Fixed up statistics to include external block handling.

	* Fixed up the external sbrk handling.  I broke it with the 3.1.1
	version.  This re-write is much cleaner.  Made some changes to
	dblock admin handling and heap-check

	* Re-added THREAD_LOCK definitions to settings.dist.  Where did
	they go?

Tue Sep  5 12:38:48 1995  Gray Watson  <gray@burger.letters.com>

	* Moved install.sh to install-sh and fixed some Makefile problems.
	Thanks Francois.

	* Simplified the heap code a lot.  Fixed race conditions.
